@@ -3,6 +3,7 @@ Development version (next release)
 - Made it possible to run the unit-tests independently of the provided OpenCL kernel samples
 - Added an option to compile in verbose mode for additional diagnostic messages (-DVERBOSE=ON)
 - Fixed the RPATH settings on OSX
+- Added Appveyor continuous integration and increased coverage of the Travis builds
 
 Version 2.3.1
 - Fixed a bug where an output buffer could not be used as input at the same time
